added desktop recording schema
